syntax = "proto3";

package student.v1;

import "google/api/annotations.proto";

option go_package = "student/api/student/v1;v1";

// The greeting service definition.
service Student {
  // Sends a greeting
  rpc GetStudent(GetStudentRequest) returns (GetStudentReply) {
    option (google.api.http) = {
      get : "/student/{id}"
    };
  }
  rpc CreateStudent(CreateStudentRequest) returns (CreateStudentReply) {
    option (google.api.http) = {
      post : "/student"
      body : "*"
    };
  }
  rpc UpdateStudent(UpdateStudentRequest) returns (UpdateStudentReply) {
    option (google.api.http) = {
      put : "/student/{id}"
      body : "*"
    };
  }
  rpc DeleteStudent(DeleteStudentRequest) returns (DeleteStudentReply) {
    option (google.api.http) = {
      delete : "/student/{id}"
    };
  }
  rpc ListStudents(ListStudentsRequest) returns (ListStudentsReply) {
    option (google.api.http) = {
      get : "/students"
    };
  }
}

// The request message containing the user's name.
message GetStudentRequest { int32 id = 1; }

// The response message containing the greetings
message GetStudentReply {
  string name = 1;
  int32 status = 2;
  int32 id = 3;
  int32 info = 4;
}

message CreateStudentRequest {
  string name = 1;
  int32 age = 2;
  int32 status = 3;
  string info = 4;
}
message CreateStudentReply { string message = 1; }

message UpdateStudentRequest {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  int32 status = 4;
  string info = 5;
}
message UpdateStudentReply { string message = 1; }

message DeleteStudentRequest { int32 id = 1; }
message DeleteStudentReply { string message = 1; }

message Students {
  string name = 1;
  int32 age = 2;
  int32 status = 3;
  string info = 4;
  int32 id = 5;
}

message ListStudentsRequest {
  int32 page_size = 1;
  int32 page = 2;
  string name = 3;
}

message ListStudentsReply {
  repeated Students data = 1;
  int32 total = 2;
}